# File_Explorer

./: About.qml  CMakeLists.txt  MyMenu.qml  MyMenuBar.qml  readme.md
Header/: abstractClass.hpp  file.hpp  fileeditor.h  treemodel.h
Source/: file.cpp  fileeditor.cpp  main.cpp  treemodel.cpp
qml/: Main.qml
